[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/BoardPlayer.gd" type="Script" id=1]
[ext_resource path="res://Assets/Images/MinPinkSheep.png" type="Texture" id=2]
[ext_resource path="res://Assets/fonts/bubblegum.tres" type="DynamicFont" id=3]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="SheepImage" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="SheepName" type="Label" parent="."]
margin_left = 186.0
margin_top = 52.0
margin_right = 701.0
margin_bottom = 144.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.52549, 0.509804, 0.788235, 1 )
text = "PLAYER"

[node name="SheepCount" type="Label" parent="."]
margin_top = -291.0
margin_right = 60.0
margin_bottom = -202.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.52549, 0.509804, 0.788235, 1 )
text = "6"

